# AI_Employee_Vault

./: .gitignore  .mcp.json  Business_Goals.md  Company_Handbook.md  Dashboard.md  GUIDE.md  SETUP_META_API.md  SOCIAL_MEDIA_GUIDE.md  cloud_orchestrator.py  credentials-of-message-sent.txt  generate_briefing.sh  health_monitor.py  local_orchestrator.py  odoo-docker-compose.yml  ralph_loop.sh  requirements.txt  sync_vault.sh
.claude/: CLOUD_SKILL.md  SKILL.md  settings.local.json
Accounting/: Current_Month.md
Briefings/: 2026-02-14_Monday_Briefing.md
CRM/: Pipeline.md
Done/: EMAIL_18944856bcee8810.md  EMAIL_189448d5b9e16bd4.md  EMAIL_1896f714d45f31c6.md  EMAIL_18a9a644dc1d8f3d.md  EMAIL_18c821b85c577a2b.md  EMAIL_19c5b5dcdd1b93de.md  EMAIL_19c5b5ea9abbbcae.md  EMAIL_19c5b7712e9658fc.md  EMAIL_19c5d5859be527f5.md  FILE_test_document.md  TWEET_DRAFT_1771088552.md  WHATSAPP_1771061356.md  WHATSAPP_1771061357.md  WHATSAPP_1771061358.md  WHATSAPP_1771061389.md  WHATSAPP_1771061390.md  WHATSAPP_1771062223.md  WHATSAPP_1771062447.md  WHATSAPP_1771062448.md  WHATSAPP_1771062449.md  WHATSAPP_1771062480.md  WHATSAPP_1771062481.md  WHATSAPP_1771062622.md  WHATSAPP_1771062623.md  (+22 more)
watchers/: accounting_watcher.py  audit_logger.py  base_watcher.py  config.json  config.py  filesystem_watcher.py  gmail_utils.py  gmail_watcher.py  mcp_server.py  notifier.py  odoo_utils.py  orchestrator.py  pyproject.toml  requirements.txt  setup_meta.py  social_utils.py  social_watcher.py  twitter_utils.py  twitter_watcher.py  watchdog_monitor.py  whatsapp_utils.py  whatsapp_watcher.py
(+92 files in other folders)
